# FluidFramework

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .releaseGroup  .remarkrc.mjs  .yarnrc.yml  BAZEL_CONVENTIONS.md  BAZEL_MIGRATION_ISSUES.md  BAZEL_MIGRATION_PLAN.md  BAZEL_MIGRATION_STATUS.md  BAZEL_MIGRATION_TRACKER.md  BAZEL_VS_BAZELISK.md  BREAKING.md  BUILD.bazel  CLARIFICATIONS_SUMMARY.md  CONTRIBUTING.md  EXPLORATION_SUMMARY.txt  MIGRATION_COMPLETE.md  MIGRATION_README.md  MONOREPO_ANALYSIS.md  PACKAGE_JSON_PATTERN.md  PACKAGE_SUMMARY.txt  PARALLEL_MIGRATION_GROUPS.md  POC_PACKAGES.md  POC_SUMMARY.md  README.md  README_ANALYSIS.md  REMAINING_BUILD_TASKS.md  REMOTE_CACHE_SETUP.md  RUNTIME_MIGRATION_BLOCKER.md  SECURITY.md  SESSION_1.2_SUMMARY.md  SESSION_1.5_DEFERRAL.md  SESSION_2.2_NOTES.md  SESSION_2.38_SUMMARY.md  SESSION_2.3_NPM_DEPENDENCY_PATTERN.md  (+41 more)
.changeset/: config.json  curly-dodos-repair.md  itchy-pets-tap.md  light-months-hope.md  lucky-numbers-happen.md  open-houses-happen.md  sad-poems-fold.md  salty-tools-carry.md  spicy-crews-suffer.md  tiny-pans-fly.md  unlucky-falcons-breathe.md
.claude/: settings.local.json
.github/workflows/: README.md  azure-static-web-apps-agreeable-hill-0eeff5b10.yml  azure-static-web-apps-nice-water-07579151e.yml  broken-link-checker.yml  changeset-reporter.yml  commit-validation.yml  issue-metrics.yml  pr-check-changeset.yml  pr-validation.yml  website-validation.yml
api-report/: container-definitions.api.md
azure/: package.json  pnpm-lock.yaml
azure/.changeset/: chilled-zebras-clean.md  forty-jars-hug.md  tough-countries-raise.md
bazel-migration/: package-lock.json  package.json  tsconfig.json
bazel-migration/configs/: package-map.json
bazel-migration/scripts/: .gitkeep  generate-build-file.ts  package-mapper.ts
build-tools/: .gitrepo  CHANGELOG.md  README.md  api-extractor-base.json  biome.jsonc  lerna-package-lock.json  package.json  pnpm-lock.yaml  syncpack.config.cjs
build-tools/docs/: fluid-build.md
build-tools/feeds/: public.txt
build-tools/patches/: nypm.patch
build-tools/plans/: command-conversion-to-vnext.md
common/lib/common-definitions/: package.json
common/lib/common-utils/: package.json  tsconfig.json
common/lib/container-definitions/: package.json
common/lib/core-interfaces/: package.json
common/lib/driver-definitions/: package.json
common/lib/protocol-definitions/: package.json
docs/: .markdownlint.json  README.md  config.yml  gruntfile.js  package-lock.json  package.json
docs/_includes/: dds-table.md  links.md
docs/advanced/: summarizer.md
docs/api-markdown-documenter/: api-documentation-layout.js
docs/assets/css/: fluid.css
docs/bazel/: API_EXTRACTOR_INTEGRATION.md  BIOME_INTEGRATION.md  COMMANDS.md  FAQ.md  GETTING_STARTED.md  MOCHA_TEST_INTEGRATION.md  PACKAGE_JSON_IN_SRCS.md  QUICK_REFERENCE.md  README.md  TEST_INTEGRATION_SOLUTION.md  TROUBLESHOOTING.md
docs/content/docs/: faq.md
docs/docs/: visual-component.md
docs/layouts/partials/: extra-head.html
docs/layouts/shortcodes/: class.html  gif.html  method.html  package.html  storybook.html
docs/static/search/: PagesIndex.json  index.html
examples/: package.json
examples/apps/ai-collab/: package.json
examples/apps/attributable-map/: CHANGELOG.md  package.json
examples/apps/blobs/: biome.jsonc  package.json
examples/apps/collaborative-textarea/: .eslintrc.cjs  package.json  webpack.test.js
examples/apps/contact-collection/: package.json
examples/apps/cra-demo/: package.json
examples/apps/data-object-grid/: package.json
examples/apps/diceroller/: package.json
examples/apps/likes/: package.json
examples/apps/likes-and-comments/: package.json  webpack.config.js  webpack.test.js
examples/apps/odspsnapshotfetch-perftestapp/: package.json
examples/apps/presence-tracker/: package.json  tsconfig.json
examples/apps/spaces/: package.json  webpack.config.js
examples/apps/staging/: package.json
examples/apps/sudoku/: .eslintrc.cjs  .eslintrc.js  package.json  tsconfig.json  webpack.config.js  webpack.dev.js  (+1 more)
examples/external-data/: biome.jsonc  package.json
experimental/dds/sequence-deprecated/: BUILD.bazel  package.json  tsconfig.bazel.json  tsconfig.cjs.bazel.json
experimental/dds/sequence-deprecated/src/: index.ts
experimental/dds/sequence-deprecated/src/test/: tsconfig.json
feeds/: internal-dev.txt  internal-test.txt
scripts/: update-changeset-config.mjs
scripts/formatting/: enable-biome.sh
scripts/repo-overlays/: README.md
server/: README.md  docker-compose.dev.yml
server/admin/: INSTRUCTION.md
server/auspkn/: package.json
server/azure-local-service/: package.json
server/gateway/: README.md  package.json  webpack.config.js  webpack.prod.js
server/gitrest/: README.md  package.json
server/headless-agent/: README.md  docker-compose.debug.yml  docker-compose.yml  package.json
server/historian/: lerna-package-lock.json  nx.json  package-lock.json  package.json
server/routerlicious/: .npmrc  README.lambdas.md  README.loader.md  README.md  docker-compose.debug.yml  lage.config.js  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/service-monitor/: README.md  package.json
server/tinylicious/: README.md  package-lock.json  package.json
tools/alchemy/: package-lock.json  package.json  tsconfig.json
tools/api-markdown-documenter/: biome.jsonc  package.json  tsconfig.json
tools/bazel/: BUILD.bazel  add-package-json-to-srcs.sh  add_package_json_to_srcs.py  biome-check.sh  create-build-bazel.sh  retrofit-npm-package.sh  run-api-extractor.sh  run-biome.sh  run-flub-entrypoints.sh  run-fluid-tsc-cjs.sh
tools/benchmark/: package.json
tools/build-tools/: package.json
tools/bundle-size-tools/: package.json
tools/generator-fluid/: package.json
tools/getkeys/: package.json
tools/markdown-magic/: package.json
tools/pipelines/: prod-test-harness.yml  repo-policy-check.yml
tools/telemetry-generator/: package.json  tsconfig.json
tools/test-tools/: package.json  tsconfig.json
(+710 files in other folders)
